<resources>
    <string name="app_name">DataSelectionViewpager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="external_storage_permisison_new">Your privacy is our priority. This\npermission required for sending and\nreceiving files only. We dont share\nyour data with anyone and its\nnever stored anywhere.</string>
    <string name="grantpermisison">Grant Permission</string>
    <string name="contact_permission">Contacts Permission</string>
    <string name="trasnfer">Send data</string>
    <string name="successFile">Files Transferred Successfully</string>
    <string name="success">Success</string>
    <string name="data_sending">Sending Data</string>
    <string name="data">Data</string>
    <string name="please_wait_for_a_while">Please wait while sending data</string>
    <string name="please_wait_for_a_while_receiving">Please wait while receiving data</string>
    <string name="totalFiles">Total Files:</string>
    <string name="totalFilesSize">Total Size:</string>
    <string name="remaining_time">Remaining Time:</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="back_to_home">Back to Home</string>
    <string name="receiver">Receiver</string>
    <string name="dataprocessing">Data processing</string>
    <string name="searching_devices">Searching Device</string>
    <string name="receivedata">Receiver</string>
    <string name="device_name">name</string>
    <string name="connect">Connect</string>
    <string name="done">Done</string>
    <string name="connectionType">Connection Type</string>
    <string name="or">OR</string>
    <string name="something_went_wrong_check_internet_and_gps">Something went wrong. Check internet and GPS.</string>
    <string name="connected_as_client">Connected as Client!</string>
    <string name="connected_as_group_owner">Connected as Group Owner!</string>
    <string name="discovery_started">Discovery Started</string>
    <string name="connected_successfully">Connected successfully!</string>
    <string name="connecting_to">Connecting to %1$s…</string>
    <string name="connection_successful_to_device">Connection successful to device: %1$s</string>
    <string name="permission_not_granted_go_to_settings">Permission not Granted Go to Settings</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="qrcode">QRCode</string>
</resources>