<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storageroot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iv_back_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="NotSibling">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="48dp"
         android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:text="@string/storage_permission"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/iv_back_arrow"

        app:layout_constraintTop_toTopOf="@id/iv_back_arrow" />

    <ImageView
        android:id="@+id/topimage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_160sdp"
        android:src="@drawable/storagepermissionicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/storage_permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topimage" />

    <TextView
        android:id="@+id/subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/external_storage_permisison_new"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationheading" />

    <TextView
        android:id="@+id/grantpermission"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/permission_btn_bg"
        android:gravity="center"
        android:text="@string/grantpermisison"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtext" />


</androidx.constraintlayout.widget.ConstraintLayout>