<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DataTransferActivity">

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/data_sending"
        android:textColor="@color/app_colour_blue"
        android:textSize="@dimen/_17ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sending"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView">


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="@dimen/_145sdp"
            android:layout_height="@dimen/_145sdp"
            android:layout_marginTop="20dp"
            android:max="100"
            android:progress="0"
            android:rotation="0"
            app:indicatorColor="#1634DC"
            app:indicatorInset="8dp"
            app:indicatorSize="@dimen/_145sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackColor="@color/white"
            app:trackCornerRadius="10dp"
            app:trackThickness="@dimen/_11sdp" />

        <TextView
            android:id="@+id/tv_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textColor="#1634DC"
            android:textSize="@dimen/_21ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />
        <TextView
            android:id="@+id/tv_bytesSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#1634DC"
            android:textSize="@dimen/_8ssp"
            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@+id/tv_percentage"
            app:layout_constraintStart_toStartOf="@+id/tv_percentage"
            app:layout_constraintTop_toBottomOf="@+id/tv_percentage" />        <!--app:lottie_fileName="sending.json"-->
        <TextView
            android:id="@+id/sendingStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/data_sending"
            android:textColor="@color/app_colour_blue"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progressBar" />


        <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/please_wait_for_a_while"
            android:textColor="@color/grey"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sendingStr" />

        <TextView
            android:id="@+id/tvTotalFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/totalFiles"
            android:textColor="@color/grey"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label" />

        <TextView
            android:id="@+id/tvTotalFilesSizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/totalFilesSize"
            android:textColor="@color/grey"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTotalFiles" />

        <TextView
            android:visibility="gone"
            android:id="@+id/btnDisconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/yellow_bg_btn_action"
            app:elevation="9dp"
            android:layout_marginHorizontal="@dimen/_80sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/done"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalFilesSizes"
            app:layout_constraintWidth_percent="0.45" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>