<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DataReceiveActivity">
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_145sdp"
        android:layout_marginTop="20dp"
        android:max="100"
        android:keepScreenOn="true"
        android:progress="0"
        app:indicatorInset="8dp"
        app:indicatorSize="@dimen/_145sdp"
        app:trackCornerRadius="10dp"
        android:rotation="0"
        app:trackColor="@color/white"
        app:indicatorColor="#1634DC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:trackThickness="@dimen/_11sdp"
        />
    <TextView
        android:id="@+id/tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0%"
        android:textColor="#1634DC"
        android:textSize="@dimen/_21ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        />
    <TextView
        android:id="@+id/tv_receivedBytes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textColor="#1634DC"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_percentage"
        app:layout_constraintEnd_toEndOf="@+id/tv_percentage"
        app:layout_constraintTop_toBottomOf="@+id/tv_percentage"
        />



    <TextView
        android:id="@+id/sendingStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="Receiving Data"
        android:textColor="@color/app_colour_blue"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />


    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/please_wait_for_a_while_receiving"
        android:textColor="@color/grey"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendingStr" />

    <TextView
        android:id="@+id/tvTotalFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/totalFiles"
        android:textColor="@color/grey"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label" />

    <TextView
        android:id="@+id/tvTotalFilesSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/totalFilesSize"
        android:textColor="@color/grey"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalFiles" />


    <TextView
        android:visibility="gone"
        android:id="@+id/btnDisconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/yellow_bg_btn_action"
        app:elevation="9dp"
        android:layout_marginHorizontal="@dimen/_80sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/done"
        android:textAlignment="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalFilesSizes"
        app:layout_constraintWidth_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>