<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.WifiDirectConnectionActivity">

    <FrameLayout
        android:id="@+id/layoutBanner"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/bannerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutBanner"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/in_bannerView"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/bg_adbody_new"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tvHeader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/bannerView"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ad_loaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ad Loading!"
            android:textColor="@color/black_text_color"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@id/bannerView"
            app:layout_constraintEnd_toEndOf="@id/bannerView"
            app:layout_constraintStart_toStartOf="@id/bannerView"
            app:layout_constraintTop_toTopOf="@id/bannerView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iv_back_arrow"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBanner">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_back_arrow"
         android:padding="@dimen/_10sdp"
        android:text="@string/receiver"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutBanner" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvShowPeers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/wifilayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back_arrow" />

    <LinearLayout
        android:id="@+id/wifilayout"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_height="@dimen/_50sdp"
        android:padding="2dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/grey_bg_btn_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@+id/rvShowPeers"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/permiisonicon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/baseline_wifi_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/_5sdp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toEndOf="@id/permiisonicon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/dataprocessing"/>

    </LinearLayout>
    <!--   <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/searchingdeviceslayout"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="@dimen/_5sdp"

           android:background="@drawable/grey_bg_btn_action"
           android:layout_marginHorizontal="@dimen/_10sdp"
           app:layout_constraintStart_toStartOf="parent"
           android:layout_marginBottom="@dimen/_25sdp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintTop_toBottomOf="@id/rvShowPeers">

           <ImageView
               android:id="@+id/wifiicons"
               android:layout_width="@dimen/_15sdp"
               android:layout_height="@dimen/_15sdp"
               android:src="@drawable/wifiicon"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               android:layout_marginStart="@dimen/_5sdp"/>

           <TextView
               android:id="@+id/processdatatext"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/dataprocessing"
               android:textColor="@color/colour_dark_green"
               android:textSize="@dimen/_10sdp"
               android:padding="@dimen/_5sdp"
               android:layout_marginStart="@dimen/_10sdp"
               app:layout_constraintStart_toEndOf="@id/wifiicons"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               android:layout_margin="@dimen/_5sdp"
               app:layout_constraintBottom_toBottomOf="parent"  /> &lt;!&ndash; This centers the TextView horizontally &ndash;&gt;

       </androidx.constraintlayout.widget.ConstraintLayout>-->

    <RelativeLayout
        android:id="@+id/progressBars"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:visibility="gone"
        android:elevation="@dimen/_5sdp"
        android:background="@color/light_grey"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerview">

        <ProgressBar
            android:id="@+id/progressBarView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/app_color"
            android:max="100"
            android:progress="65" />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBarView"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:text="Please Wait.."
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:nestedScrollingEnabled="false"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:lottie_autoPlay="true"
        app:lottie_fileName="completed.json"
        app:lottie_loop="true" />

    <TextView
        android:id="@+id/textWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_5sdp"
         android:gravity="center"
        android:text="@string/searching_devices"
        android:textColor="@color/colour_dark_green"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@id/progressBar"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>